# llm-distilbert-base-uncased

./: .gitignore  README.md  pyproject.toml
scripts/: download_model.py  infer_local.py
